--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-
-
 }
+
 
 dependencies {
 
@@ -53,6 +51,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.14.9'
     implementation 'com.auth0.android:jwtdecode:2.0.0'
     implementation 'com.mohamedabulgasem:loadingoverlay:1.0.0'
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
