--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OkDoc">
+        android:theme="@style/splash_screen">
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true"
